routes serving stops table working

--- a/react-google-charts/index.html
+++ b/react-google-charts/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <title>Sample App</title>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+					type="text/css"
+					rel="stylesheet" />
   </head>
   <body>
     <div id='root'>
